[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.3",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.7.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
